test-cases/negative/test_120_empty_block.lay
# negative test: empty block statements
# expected: parser should handle this gracefully

if true then
end if

for each item in list do
end for


